--- a/stylesheets/application.scss
+++ b/stylesheets/application.scss
@@ -1,56 +1,13 @@
-html, body, header, nav, h1, a,
-ul, li, strong, main, button, i, em,
-section, img, div, h2, p, form, h3, h4,
-fieldset, label, input, textarea,
-span, article, footer, time, small, select {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font: inherit;
-  color: inherit;
-  text-align: inherit;
-  text-decoration: inherit;
-  vertical-align: inherit;
-  box-sizing: inherit;
-  background: transparent;
-}
+/*
+ *= require_self
+ */
 
-ul {
-  list-style: none;
-}
+// CSS Reset
+@import "base/reset.scss";
 
-img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
+// Core
+@import "base/colors.scss";
+@import "base/fonts.scss";
+@import "base/layout.scss";
 
-input[type="password"],
-input[type="email"],
-input[type="text"],
-input[type="submit"],
-textarea,
-button,
-select {
-  /*
-  Get rid of native styling. Read more here:
-  http://css-tricks.com/almanac/properties/a/appearance/
-  */
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-button,
-input[type="submit"] {
-  cursor: pointer;
-}
-
-/* Clearfix */
-
-.group:after {
-  content: "";
-  display: block;
-  clear: both;
-}
+// Components
