--- a/stylesheets/components/homepage.scss
+++ b/stylesheets/components/homepage.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 65px;
   text-align: left;
-  padding: 15px 30px;
+  padding: 15px 40px;
   box-sizing: border-box;
   font-family: $header;
   font-size: 15px;
@@ -29,7 +29,7 @@
       overflow: hidden;
       img {
         object-fit: cover;
-        transform: translate(0, -8px);
+        transform: translate(4px, 22px) scale(6);
         filter: grayscale(100%);
       }
     }
