--- a/stylesheets/base/colors.scss
+++ b/stylesheets/base/colors.scss
@@ -1,6 +1,6 @@
 $blue: #07ABF6;
 $light-blue: #6AC8E9;
 
-$lightest-gray: #f9f8f6;
-$light-gray: #c3c3c3;
-$gray: #a7a7a7;
+$lightest-gray: #f1f3f6;
+$light-gray: #d9dadb;
+$gray: #abafb5;
