--- a/stylesheets/components/directory.scss
+++ b/stylesheets/components/directory.scss
@@ -6,11 +6,13 @@
 }
 
 .directory-hidden {
+  transition: .5s ease;
   transform: translateX(-300px);
   width: 0;
 }
 
 .directory-show {
+  transition: .5s ease;
   transform: translateX(0);
   width: 300px;
   min-width: 300px;
