--- a/stylesheets/components/directory.scss
+++ b/stylesheets/components/directory.scss
@@ -63,7 +63,7 @@
 
 .directory-folder {
   background-color: white;
-  color: $light-gray;
+  color: $gray;
   padding: 20px;
   margin-bottom: 10px;
   display: flex;
