add height to media only style for chart

--- a/stylesheets/components/homepage.scss
+++ b/stylesheets/components/homepage.scss
@@ -130,6 +130,8 @@
     width: auto;
     margin-bottom: 60px;
     margin-right: 0px;
+    min-height: 500px;
+    height: 500px;
   }
   #content {
     flex-direction: column;
