--- a/stylesheets/components/directory.scss
+++ b/stylesheets/components/directory.scss
@@ -3,6 +3,8 @@
   height: 100vh;
   transition: .5s ease;
   box-sizing: border-box;
+  // transform: translateX(0);
+  // width: 300px;
 }
 
 .directory-hidden {
